name:                atomos
version:             0.1.0
-- synopsis:            
-- description:         
homepage:            https://github.com/philopon/atomos
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Text.Atomos.Lens
                     , Text.Atomos.Types
                     , Text.Atomos.Atom.Export
                     , Text.Atomos.Atom.Import
  build-depends:       base              >=4.6  && <4.8
                     , time              >=1.5  && <1.6
                     , profunctors       >=4.2  && <4.3
                     , text              >=1.2  && <1.3
                     , bytestring        >=0.10 && <0.11
                     , semigroups        >=0.15 && <0.16
                     , tagsoup           >=0.13 && <0.14
                     , dlist             >=0.7  && <0.8
                     , base64-bytestring >=1.0  && <1.1
                     , parsec            >=3.1  && <3.2
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
